Add .md-based Work Effort Management System

--- a/content/Daily-Notes/2024-11-17.md
+++ b/content/Daily-Notes/2024-11-17.md
@@ -14,6 +14,12 @@
 
 ## 📝 Daily Reflections
 
+`Sun, 11/17/2024, 14:11`
+Ok, if I did it right...this should work.
+Voila, behold:
+[[WE2222-1117-2024]]
+A new work effort, created from a python script. Soon to be created by my [[WinfoNova]] plugin * cue laughter *
+
 `Sun, 11/17/2024, 12:28`
 Nova will be able to: create documents, make work efforts, do work on them, follow up on those work efforts, process that stuff, and keep track of it, spin up custom one-time-use AI models and [[AI Agent Swarm]] workflows to create custom, scalable, trackable workflows to make everything and anything you want. [[vSLAM]] will provide the power to the bodies that Nova will pilot. 
 This could become [[Skynet]]. We must tread lightly.
