--- a/content/work-efforts/WE2024-1117-2430/WE2024-1117-2430.md
+++ b/content/work-efforts/WE2024-1117-2430/WE2024-1117-2430.md
@@ -1,5 +1,5 @@
 ---
-title: "NovaSystem Example - Nova Builds Nova"
+title: NovaSystem Example - Nova Builds Nova
 created: 2024-11-17
 status: in-progress
 type: documentation
@@ -15,12 +15,17 @@ related:
   - "[[Nova Process Overview]]"
   - "[[Work Efforts Management]]"
   - "[[Technical Documentation]]"
-  - "[[Implementation Guidelines]]"
-work-efforts:
-  - "[[WE2024-1117-2430]]"
+  - "[[Work Effort Implementation Guidelines]]"
+parent-effort: 
+child-efforts:
   - "[[WE2024-1117-2431]]"
   - "[[WE2024-1117-2432]]"
   - "[[WE2024-1117-1745]]"
+related-efforts:
+  - "[[WE2024-1118-1234]]"
+chat-router: "[[WE2024-1117-2430-chats]]"
+recent-chats:
+  - "[[chat-20241117-2430]]"
 ---
 
 # Nova Builds Nova
@@ -440,7 +445,7 @@ Let's expand the core functionality documentation with detailed implementation g
 - [[Nova Process Overview]]
 - [[Work Efforts Management]]
 - [[Technical Documentation]]
-- [[Implementation Guidelines]]
+- [[Work Effort Implementation Guidelines]]
 - [[System Architecture]]
 - [[Security Requirements]]
 - [[Testing Framework]]
