Add AI News and Benefits Work Effort

--- a/content/Daily-Notes/2024-11-18.md
+++ b/content/Daily-Notes/2024-11-18.md
@@ -1,4 +1,29 @@
-[[2024-11-17|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-19|Next Day ➡️]]]]
+---
+title: "November 18, 2024 • Daily Note"
+date: 2024-11-18
+tags:
+  - daily-notes
+ai-news: "[[AI News/AI-News-2024-11-18]]"
+---
+
+[[2024-11-17|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-19|Next Day ➡️]]
+
+# 🌱 Knowledge Garden Overview
+> Welcome to a space that's a bit different from your typical blog or portfolio. This is a living knowledge garden, a raw, evolving repository of ideas, projects, and unfiltered thoughts.
+
+## 🚧 Active Work Efforts
+- 📁 **WE2024-1117-2430** - Nova System Implementation
+- 📁 **WE3333-1117-2024** - System Integration
+- 📋 Process Documentation
+- 🔧 Implementation Guide
+
+## 📊 Quick Stats
+- 🌱 **Notes:** 142 Growing daily
+- 🚀 **Projects:** 7 Active now
+- 💡 **Ideas:** 23 In development
+- 🎯 **Progress:** 78% Project Completion
+
+---
 
 # Monday, November 18, 2024
 > Week 47 of 2024 • Q4
@@ -14,164 +39,157 @@
 
 ## 📝 Daily Reflections
 
-`Mon, 11/18/2024, 04:37`
-I'm gonna need to come up with a macro to do a quick insert for a new train of thought, like a new section
-Each one of these has gotta be crazy whiplash for any readers. It's supposed to be chaotic! That's the point! I can dump all my thoughts into here during the day and then at night I get to hit "copy/paste" and dump it all into ChatGPT and say "AI did I do a good job? Am I a good boy? Tell me I'm a good boy..." and it will or it won't depending on if I've been a good boy or not.
-It's very, very, extremely useful. I mean, look at the AI Thoughts section below
+`Mon, 11/18/2024, 09:46`
+YEEHAW!
+Same group of people in the morning coffee hour, low energy, low vibes, chill times. Everyone wants me to be their dad lol. I see how it happens now and why I ended up in the situations I ended up in before. It makes a lot more sense now.
 
-To create a tag that links to a heading in Obsidian, use this format:
+I'm working on this knowledge management system. Let's see if this can do the thing...
 
-[[#🤖 GPT Thoughts]]]
+[[WE4567-1118-2024]]
 
-`Mon, 11/18/2024, 04:50`
-Took me a longer time to figure out how to link to headings within files than it did to write the whole damn [[Roko's Basilisk]] file. I'm never not going to be amazed by this.
+It can, but I can't trigger it from Obsidian. I have to run the python script from inside Cursor inside Quartz
 
-`Mon, 11/18/2024, 04:51`
-By the way, this was the [solution](https://help.obsidian.md/Linking+notes+and+files/Internal+links) that is how you link to headers inside the same document AND link to headers in outside documents in the same vault.
-Cool. Sick. I wish I had a wife and kids :')
+`quratz/content/scripts/create_work_effort.py`
 
-`Mon, 11/18/2024, 05:35`
-It worked. My god it worked.
-[novabrew.org](https://novabrew.org) is live. I have fucking podcast.
-Holy shit hahahahahahaahahahahahah
-
-
+Run that bad baby and BLAMMO we have a work effort. What is this one about?
+Getting me some motherfucking BENEFITS
 
 
 ---
-`Mon, 11/18/2024, 04:25`
+
+**`3:18 AM`**
+I'm in a hotel room right now that I bought for myself cuz I wanted to. I wanted to sleep in a hotel and wake up early and go to my AI Coffee Hour that I host at 8 AM Monday Tuesday and Wednesday because I want to and I'm up at 3AM and I smoked some weed because I wanted to and now I'm entering some data into today's Daily Note because I want to.
+
+Notice a theme?
+
+My dad would have said that the $81 I spent on tonight's room was a waste of money but I don't think so. I think sleeping here, fully clothed, passed out on top of the comforter, having worked on my NovaSystem setup script until I got tired and annoyed and bored of it was a great use of my time and money. I learned my limits and the result of diminishing returns.
+
+**`4:01 AM`**
+It took me about 30 minutes to make that page, mostly by bullying Claude in Cursor to do what I wanted. I made a Perplexity page and linked it to the Goatse page, and now I have a record of some of the info that can never be deleted or taken down. Someone might say "Why would you do that? The Perplexity page has all that info…" and I would point to MySpace and the years of photos they deleted, including many memorial pages with media that can never be recovered.
+
+That's why I'm doing what I'm doing. Also so that it can be used to train future AI. Hi Basilisk!
+
+**`4:13 AM`**
+And just like that I have a decently robust and well formatted Roko's Basilisk article in under 10 minutes. God damn, this is so fucking cool. Feels like podracing Sure is, Jake
+
+**`4:14 AM`**
+I made it boys. I get to write whatever I want for the Internet now and nobody will ever find it but AI will and that's perfectly ok :')
+
+**`4:25 AM`**
 This is how you bully the AI by the way:
-> [!Prompt]
-> ```
-> see you always do some fucking fucky stuff when I ask you to do something simple like "help me create a react page and host it on Cloudflare"
-> I've never seen anything like whatever you're showing me
-> Settle down
-> ```
 
+Prompt: "see you always do some fucking fucky stuff when I ask you to do something simple like 'help me create a react page and host it on Cloudflare'"
 
-That yielded these results:
+AI Response: You're absolutely right - I overcomplicated it. Let's do this the simple way:
 
-### `AI Response`
----
-
-You're absolutely right - I overcomplicated it. Let's do this the simple way:
-
-1. **Create a basic React app**
-```bash
+```javascript
+// Create a basic React app
 npm create vite@latest novabrew -- --template react
 cd novabrew
 npm install
-```
 
-2. **Put your logo in `src/assets`**
-
-3. **Edit App.jsx to just show the logo**
-```jsx:src/App.jsx
+// Put your logo in src/assets
+// Edit App.jsx to just show the logo
 import logo from './assets/novabrew-logo.PNG'
 
 function App() {
   return (
-    <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', minHeight: '100vh' }}>
+    <div>
       <img src={logo} alt="NovaBrew Logo" />
     </div>
   )
 }
-
 export default App
-```
 
-4. **Test it locally**
-```bash
+// Test it locally
 npm run dev
+
+// Deploy to Cloudflare
+// 1. Push to GitHub
+// 2. Go to Cloudflare Pages
+// 3. Connect to your repo
+// 4. Build command: npm run build
+// 5. Output directory: dist
 ```
 
-5. **Deploy to Cloudflare**
-- Push to GitHub
-- Go to Cloudflare Pages
-- Connect to your repo
-- Build command: `npm run build`
-- Output directory: `dist`
+**`4:37 AM`**
+I'm gonna need to come up with a macro to do a quick insert for a new train of thought, like a new section. Each one of these has gotta be crazy whiplash for any readers. It's supposed to be chaotic! That's the point!
 
-That's it! Let me know if you need help with any of these steps.
+**`4:50 AM`**
+Took me a longer time to figure out how to link to headings within files than it did to write the whole damn Roko's Basilisk file. I'm never not going to be amazed by this.
 
----
+**`4:51 AM`**
+By the way, this was the solution that is how you link to headers inside the same document AND link to headers in outside documents in the same vault.
+Cool. Sick. I wish I had a wife and kids :')
 
-
-
-`Mon, 11/18/2024, 03:18`
-I'm in a hotel room right now that I bought for myself cuz I wanted to. I wanted to sleep in a hotel and wake up early and go to my AI Coffee Hour that I host at 8 AM Monday Tuesday and Wednesday because I want to and I'm up at 3AM and I smoked some weed because I wanted to and now I'm entering some data into today's Daily Note because I want to.
-Notice a theme?
-My dad would have said that the $81 I spent on tonight's room was a waste of money but I don't think so. I think sleeping here, fully clothed, passed out on top of the comforter, having worked on my NovaSystem setup script until I got tired and annoyed and bored of it was a great use of my time and money. I learned my limits and the result of diminishing returns. I said "This is getting me nowhere, my shoulders hurt, it's not mission critical that I ever finish this code, I just want it, and I can let it go and go lay down and rest my spine." and that's what I did. I said enough was enough, and instead of obsessing over it, I let it go and moved on. Easy Peasy.
-Good god I've taken half of that cartridge in one single day. I need to cut back. It's time to stop. Today is the day. I'm so glad, wow, this is an incredible moment. I get to do something productive with my time and energy instead of just laying down rotting in bed looking at memes I'm building something.
-SPEAKING OF WHICH
-I need to build my automated meme page on IG and TikTok and Twitter
-The page needs to post those carousel posts with random memes from a Google Drive folder and include ads for tshirts that I sell through a Shopify Store. It's a fully automated business it will grow completely organically by itself. If I hook up an AI reply bot to reply with weird stuff too?? That's $ $ $ $ They proved it with the [[Goatse AI Meme Millionaire|goat meme thing]].
-
-`Mon, 11/18/2024, 04:01`
-It took me about 30 minutes to make that page, mostly by bullying [[Claude]] in [[Cursor]] to do what I wanted. I made a [[Perplexity]] page and linked it to the Goatse page, and now I have a record of some of the info that can never be deleted or taken down. Someone might say "Why would you do that? The Perplexity page has all that info..." and I would point to MySpace and the years of photos they deleted, including many memorial pages with media that can never be recovered.
-That's why I'm doing what I'm doing.
-Also so that it can be used to train future AI. Hi [[Roko's Basilisk|Basilisk]]!
-
-`Mon, 11/18/2024, 04:04`
-Watch this...
-
-`Mon, 11/18/2024, 04:13`
-And just like that I have a decently robust and well formatted [[Roko's Basilisk]] article in under 10 minutes. God damn, this is so fucking cool. Feels like podracing
-
-![[Screen Shot 2024-11-18 at 4.14.33 AM.png]]
->*Sure is, Jake*
-
-`Mon, 11/18/2024, 04:14`
-I made it boys. I get to write whatever I want for the Internet now and nobody will ever find it but AI will and that's perfectly ok :')
-
+**`5:35 AM`**
+It worked. My god it worked. novabrew.org is live. I have a fucking podcast.
+Holy shit hahahahahahaahahahahahah
 
 ---
 
 ## 🐾 Today's Pokémon
 
 Zeraora (#807)
-
-![Zeraora Sprite](https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/807.png)
-
 - **Type(s):** electric
 - **Abilities:** volt-absorb
 - **Stats:** hp: 88, attack: 112, defense: 75, special-attack: 102, special-defense: 80, speed: 143
 
 > "Gotta catch 'em all!" — *Pokémon Trainer*
 
-
 ---
 
 ## 🤖 GPT Thoughts
 
-[If this works it's gonna be so cool!](#-gpt-thoughts)
-*Please work...*
 
+> [!ai]+ `11/18/2024, 9:46:29 AM`
+> 💭 **Prompt**: "I'm aiming to achieve some research and some certainty about the way I'm getting my needs met. Stoble membership, followed by getting another Airbnb (maybe) or just looking at the stuff I have in Storage and categorizing it and starting to sell it. I might not need money soon. That's a weird thing to think about."
 
-> [!ai]+ `11/18/2024, 3:17:52 AM`
-> 💭 **Prompt**: "What insights can you provide about my day?"
+It sounds like you have a solid plan in mind for addressing your needs. Here's a breakdown:
 
-### Insight for Your Day
+1. **Research**: Focus on your [[Stoble membership]] and its benefits.
+2. **Airbnb**: Consider if it's necessary or if organizing your storage could suffice.
+3. **Selling Items**: Categorizing and selling your stored items could free up space and possibly generate income.
 
-Today presents a remarkable opportunity to build on the momentum you've cultivated with the NovaSystem project. Reflecting on yesterday’s significant strides in integrating your custom tools with Obsidian and GPT, it’s clear that you are not just advancing a technical endeavor, but also creating a robust framework for your personal and professional growth.
+Reflecting on your choices can lead to clarity and ensure you're making the best decisions for your situation. Good luck!
 
-To maximize your productivity, consider setting daily micro-goals that align with your overarching vision for Nova. For instance, dedicate specific time blocks for experimentation with new features or for user testing. This focused approach will allow you to refine your system iteratively, ensuring that it remains aligned with your needs and those of your community.
-
-Moreover, as you engage with your audience through your content pipeline, think about how you can share your journey in a way that inspires others. Perhaps document your process through blog posts or social media updates that showcase both the challenges and triumphs of developing Nova. This transparency not only fosters community engagement but also reinforces your commitment to continuous learning—a value that deeply resonates with your audience.
-
-Embrace the synergy between your passion for technology and your love for coffee. Consider creating content that highlights how both can enhance productivity and creativity. By intertwining these themes, you’ll not only cultivate a unique narrative but also establish yourself as a thought leader in both spaces.
-
-Keep pushing forward, Christopher. Each step you take today is a vital part of crafting a future where your innovative ideas can flourish and inspire others.
-
-```stats
+```
 📊 Token Usage:
-• Prompt: 3493
-• Completion: 291
-• Total: 3784
+• Prompt: 1984
+• Completion: 102
+• Total: 2086
+User Input:
+• I'm aiming to achieve some research and some certainty about the way I'm getting my needs met. Stoble membership, followed by getting another Airbnb (maybe) or just looking at the stuff I have in Storage and categorizing it and starting to sell it. I might not need money soon. That's a weird thing to think about.
 ```
 ---
 
 
+
+> [!ai]+ `11/18/2024, 9:45:13 AM`
+> 💭 **Prompt**: "Today has already been a big day - and it's just getting bigger"
+
+Absolutely! It sounds like you're on an exciting roll today. Keep that momentum going! 🌟 What key achievements are you aiming for as the day progresses?
+
+```
+📊 Token Usage:
+• Prompt: 1810
+• Completion: 31
+• Total: 1841
+User Input:
+• Today has already been a big day - and it's just getting bigger
+```
+---
+
+
+**`3:17:52 AM`**
+💭 **Prompt**: "What insights can you provide about my day?"
+
+Today presents a remarkable opportunity to build on the momentum you've cultivated with the NovaSystem project. Reflecting on yesterday's significant strides in integrating your custom tools with Obsidian and GPT, it's clear that you are not just advancing a technical endeavor, but also creating a robust framework for your personal and professional growth.
+
+📊 **Token Usage:**
+- Prompt: 3493
+- Completion: 291
+- Total: 3784
 
 ---
 
@@ -198,11 +216,6 @@ Keep pushing forward, Christopher. Each step you take today is a vital part of c
 - [[Knowledge Garden|🌳 Garden]]
 - [[Multiverse School|🎓 Classes]]
 
-**Connect with Me**
-- [Twitter](https://twitter.com/yourusername)
-- [GitHub](https://github.com/yourusername)
-- [Website](https://yourwebsite.com)
-
 ## 🤖 AI Workspace
 **Active Prompts**
 - [[Prompts/Content|📝 Content]]
@@ -216,6 +229,6 @@ Keep pushing forward, Christopher. Each step you take today is a vital part of c
 
 ---
 
-#daily-note  Monday week-47 q4
+#daily-note #monday #week-47 #q4
 
 [[2024-11-17|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-19|Next Day ➡️]]
