--- a/content/Daily-Notes/2024-11-18.md
+++ b/content/Daily-Notes/2024-11-18.md
@@ -1,5 +1,5 @@
 ---
-title: "November 18, 2024 • Daily Note"
+title: November 18, 2024 • Daily Note
 date: 2024-11-18
 tags:
   - daily-notes
@@ -30,10 +30,18 @@ ai-news: "[[AI News/AI-News-2024-11-18]]"
 - 🎯 **Days until EOY:** 42
 - 🔄 **Created at:** 3:17 AM
 
+# 📰 AI News
+[[AI News/AI-News-2024-11-18|Today's AI News]]
+
 ---
 
 ## 📝 Daily Reflections
 
+
+`Mon, 11/18/2024, 13:40`
+I think this bad boy is finally ready for the real fuckin rodeo. Let's get this show on the road -- time to make some YouTube video goodness from [[Stoble]] just like I always planned to. Let's DO THIS THING :)
+
+---
 
 `Mon, 11/18/2024, 10:39`
 I just finished cleaning up the shower and my teeth. I feel so much better, but also worse. I need a fucking JOB job. I need to make a lot of money. I think the next best thing for me to do would be to start getting on public benefits, and the best way to do that would be to get my ass over to the storage unit and to get an actual inventory on everything.
