Add Johnny Decimal Folder Structure

--- a/content/Daily-Notes/2024-11-18.md
+++ b/content/Daily-Notes/2024-11-18.md
@@ -1,9 +1,9 @@
 ---
-title: November 18, 2024 • Daily Note
-date: 2024-11-18
+title: 'November 18, 2024 • Daily Note'
+date: '2024-11-18'
 tags:
   - daily-notes
-ai-news: "[[AI News/AI-News-2024-11-18]]"
+ai-news: '[[AI News/AI-News-2024-11-18]]'
 ---
 
 [[2024-11-17|⬅️ Previous Day]] | [[index|🏠 Home]] | [[2024-11-19|Next Day ➡️]]
@@ -15,8 +15,6 @@ ai-news: "[[AI News/AI-News-2024-11-18]]"
 - [[WE4567-1118-2024]] - Get on Public Benefits
 - 📁 [[WE2024-1117-2430]]- Nova System Implementation
 - 📁 **[[WE3333-1117-2024]]** - System Integration
-- 📋 Process Documentation
-- 🔧 Implementation Guide
 
 ---
 
@@ -37,6 +35,83 @@ ai-news: "[[AI News/AI-News-2024-11-18]]"
 
 ## 📝 Daily Reflections
 
+
+`Mon, 11/18/2024, 19:11`
+I'm at [[Banshee]] yet again. I love it here man, the vibe is just immaculate.
+I learned something - the words I'm smithing in [[The Multiverse School]] class are more scalable than I realized. If I just go on #YouTube and say the same shit I said tonight in class, I bet that people would find it valuable.
+Sure, a few thousand folks, or even millions, might think I'm silly or dumb or whatever other negative opinion they might have about me.
+But the same number of people might hear what I said, something that seems simple and obvious to me, they might hear it and suddenly realize something they needed to understand, something that changes their life for the better. If I **DON'T** do that I'm robbing that person of the chance to have that information delivered, that experience happen, and that transformation happen.
+If I don't express myself openly and honestly with YouTube, then i'm denying someone out there the chance to have the kind of positive, life-altering, empowering experience Katie has had with me, or Tara, or TK, or Ryan or Liz. If I let my demons win, my insecurities stop me, I deny those people the chance to fully understand themselves in the same way that I would have been denied if the people I learned from had never spoken out. 
+
+`Mon, 11/18/2024, 19:20`
+I haven't been served yet lol. They don't like me anymore :( 
+No that's not true. I'm just being lowkey incognito they're not looking my way I'm in the corner where they're not working it's my fault. Although it is SUPER weird to go from walking downtown and having everyone say hi to me, introduce me to their friends and family, invite me places, etc... to just... nothing....
+That still feels weird to me. I haven't gotten used to it. It used to feel so friendly and alive. Now? It's just old stories and a handful of people who remember anything about what those things were like and how it felt to be part of it all. They're just as sad as I am that it's not happening anymore. It was tight. Now it's just... it's just different. It's not the same and everyone feels it. Well...everyone who's left. Most of the people who made this downtown feel like it felt have either moved away or they've started working different places. Some of them started families. SOme blocked me. Others moved away and started new lives. Many simply dropped off the radar and started working some office job and stopped going out, stopped partying, and started spending more time volunteering for the local softball team.
+Others simply grew up, started taking care of their mom, started giving lessons to aspiring swimmers, or otherwise realized that they're in their 30s and they need to slow down.
+That's me. That's where I'm at. I'm not the party, I never was. I was just a guy who wanted to eat snacks with his friends. I have that...sort of. Sometimes. I try. But it' snot the same. It could be...but I'm not the same. I don't have the same passion I once had. I just want to sit around and make videos and make money from that and educate the world and let that take me on a cruise for work and make my lifestyle just...doing things and helping people.
+
+Installing [[RAG]] systems would do it. Traveling to install secure, offline, HIPPA compliant RAG systems for people around the world would do it. Or traveling to invest in and install some kind of energy generation for developing areas. That would do it too.
+
+By "do it" I mean allow me to make my lifestyle traveling to help people with a specific problem that I am particularly well suited to solve.
+
+I'm ready.
+
+Let's do this. YouTube is the most scalable highest ROI thing I can do with myself and my time.
+
+Learning to code was important, and I feel like understanding this stuff from the level I do was a necessary prerequisite for the next layer of AI tech development and societal transformation we're about to live through.
+
+I'm going to pursue some specific sponsorship and other opportunities tomorrow, including social services. I'll look into grants etc while I wait and use this system I'm developing to do this workflow energy management.
+
+![[Pasted image 20241118193054.png]]
+
+![[super-mario-64---here-we-gooo-made-with-Voicemod.mp3]]
+
+
+`Mon, 11/18/2024, 19:32`
+Ok I know what I gotta do...now I just gotta fucking do it. I know how, when where, why, how much work it's gonna take, who I'll meet, what to watch out for, how it's gonna go down, and precisely what I can expect to receive if it goes well, and if it doesn't.
+I'm there. Let's do this.
+It begins tomorrow. The day before my 35th birthday. Not how I imagined my birthday would go. Yet here we are. I'm here, so is everyone else. Such is life. So be it.
+
+---
+
+## Intro to AI Class
+
+`Mon, 11/18/2024, 17:02`
+>Tara - I'm trying to learn the difference between LLMs, AI, and Agents
+>What do I need from an API
+> How to use APIs
+> Tara was listening to Liz class talking about swarms and agents
+> Has questions about how to monitor your own diabetes and glucose tradking
+> You would create your own data and you would have the agent be able to look at your data and be able to find correlation and then classify the data
+> Question: "How many agents would I need?"
+
+SarahL responded that the "Benchmarks"[[AI Agents]] class would be beneficial
+
+- Do I want multiple agents talking and finding a solution or do I want one central agent handling everything?
+
+This is a VERY autistic group hahahaha
+
+SarahL says that it's about prioritizing the ways you're allocating and budgeting your energy. The autism attracts the vibe doesn't it??
+
+Wild. I forget about it all the time.
+
+`Mon, 11/18/2024, 17:11`
+SarahL says what is working now is using ChatGPT to use it to fix your workflow.
+
+`Mon, 11/18/2024, 18:10`
+ChatGPT is a magic guessing machine that can give you a confidence interval. It's a magic statistical prediction engine.
+
+`Mon, 11/18/2024, 18:50`
+Notes for new curriculum
+1. Cognitive processing - learning more about yourself is always valuable (you are a prediction engine always trying to find out if. you're right and so is everybody else and that explains their behavior)
+2. ChatGPT prompting tips - people use this every day and need help
+3. Notekeeping systems like Obsidian - Capturing the work you do with ChatGPT and construcing better prompts using Obsidian is a super valuable thing
+4. Making people feel less alone - telling my story and showing my processes seems to be a hit every time
+5. Validation - you're doing good - a pat on the head is always valuable - reassurance is what I sold at Naked Lounge
+6. Beginner intimidation hump jumping - helping people deconstruct stuff and get out of their head - help me stop thinking "I have to shut up around the people who know stuff" - community and camaraderie and companionship and socializing and feeling less alone and less isolated and lose - relief, genuine and simple
+7. People feel embarrassed to even ask ChatGPT - you're fine just show people an example and let them think you're an idiot cuz for the other people it will be super beneficial. Give them time to process and generate a new understanding. Your videos will be the touch point that allows people to begin to formulate their understanding of the new paradigm, and will help people see that they can do it for themselves.
+
+---
 
 `Mon, 11/18/2024, 13:40`
 I think this bad boy is finally ready for the real fuckin rodeo. Let's get this show on the road -- time to make some YouTube video goodness from [[Stoble]] just like I always planned to. Let's DO THIS THING :)
@@ -152,6 +227,30 @@ Zeraora (#807)
 ---
 
 ## 🤖 GPT Thoughts
+
+
+> [!ai]+ `11/18/2024, 7:17:13 PM`
+> 💭 **Prompt**: "Focus on the idea that I talk about in the YoUTube section where I said that I would have been denied if "the people i learned from had never spoken out" think about that please"
+
+The idea you mentioned emphasizes the importance of sharing knowledge and experiences. By expressing your insights on [[YouTube]], you create opportunities for others to learn and grow, just as you did from those who shared before you. **Not speaking out could deny someone the chance for transformation**, highlighting the ripple effect of open communication in personal development. Your voice matters in fostering understanding and connection.
+The importance of sharing knowledge is profound. By expressing your insights on YouTube, you not only honor those who helped you but also create a pathway for others to learn and transform. Every story shared can resonate with someone in need of guidance or clarity. Your willingness to speak out fosters a community of understanding and connection, empowering others to explore their potential just as you did. The ripple effect of open communication is vital in personal development; it allows for growth and transformation that might otherwise remain untapped.
+If you didn't share your insights and experiences, you might unknowingly hinder someone's growth or understanding. The potential transformations that could occur from your voice being heard would remain unrealized. Others may miss out on valuable knowledge that could empower them, just as you were empowered by those who spoke before you. Your silence could create a void where someone else needed guidance, leaving them feeling isolated in their struggles without the chance to learn from your journey.
+In that way, your willingness to share can create a ripple effect where others feel encouraged to voice their thoughts and experiences as well. This mutual exchange fosters a community where everyone is learning from one another, breaking the isolation that often comes with personal struggles. By contributing your insights, you not only validate your own journey but also empower others to embark on their paths towards understanding and growth. Your voice plays a crucial role in this ecosystem of support and transformation, reminding us all of the interconnectedness of our experiences.
+It's true that many people underestimate their impact and importance. Expressing ourselves openly and honestly fosters genuine connections and encourages others to do the same. Embracing our authentic selves can lead to a greater understanding among individuals, creating a space where everyone feels valued and heard.
+Your voice matters in fostering understanding and connection. 
+
+
+
+```
+📊 Token Usage:
+• Prompt: 3488
+• Completion: 75
+• Total: 3563
+User Input:
+• Focus on the idea that I talk about in the YoUTube section where I said that I would have been denied if "the people i learned from had never spoken out" think about that please
+```
+---
+
 
 
 > [!ai]+ `11/18/2024, 9:46:29 AM`
